--- a/package.json
+++ b/package.json
@@ -21,5 +21,7 @@
     "express": "^4.17.1",
     "pug": "^2.0.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^1.19.1"
+  }
 }
